<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ejemplo.com.guia4_2.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Mi aplicación de Negocios"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/icon_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:onClick="changeText"
            android:background="@color/colorAccent"
            android:text="@string/btn1"
            android:textColor="@android:color/background_light"
            tools:background="@color/colorPrimary" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:text="@string/btn2"
            android:onClick="changeText"
            android:textColor="@android:color/background_light"
            tools:background="@color/colorPrimary" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:onClick="changeText"
            android:background="@color/colorAccent"
            android:text="@string/btn3"
            android:textColor="@android:color/background_light"
            tools:background="@color/colorPrimary" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:text="@string/btn4"
            android:onClick="changeText"
            android:textColor="@android:color/background_light"
            tools:background="@color/colorPrimary" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            android:text="@string/btn5"
            android:onClick="changeText"
            android:textColor="@android:color/background_light"
            tools:background="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>

